@@ -1134,6 +1134,7 @@ void NextLevel()
 
     LevelMacro = LEVELMACRO_OFF;
     LevelMacroCounter = 0;
+    LevelMacroWhich = 0;
     StopMusic();
     lunaReset();
     ResetSoundFX();
@@ -1334,6 +1335,7 @@ void UpdateMacro()
         LevelBeatCode = 4;
         EndLevel = true;
         LevelMacro = LEVELMACRO_OFF;
+        LevelMacroWhich = 0;
         LevelMacroCounter = 0;
         XRender::clearBuffer();
     }
