@@ -3313,6 +3313,7 @@ void YoshiEatCode(const int A)
                             PlaySound(SFX_Key);
                             StopMusic();
                             LevelMacro = LEVELMACRO_KEYHOLE_EXIT;
+                            LevelMacroWhich = B;
                             break;
                         }
                     }
