@@ -1861,6 +1861,7 @@ void UpdatePlayer()
                                     PlaySound(SFX_Key);
                                     StopMusic();
                                     LevelMacro = LEVELMACRO_KEYHOLE_EXIT;
+                                    LevelMacroWhich = B;
                                     break;
                                 }
                             }
